--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^0.3.0     
+  firebase_analytics: ^1.0.4
+  firebase_auth: ^0.8.1+4
+  cloud_firestore: ^0.9.7 
+  google_sign_in: ^4.0.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -27,6 +31,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+    
 
 
 # For information on the generic Dart part of this file, see the
@@ -42,7 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/hum_shake_logo.jpg
+   - assets/
    #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
