--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # open-source package named english_words, which contains a few thousand of the most used English words plus some utility functions.
+  english_words: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
